<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bccbd2"
    tools:context=".Vista.FormularioVista">

    <EditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="12dp"
        android:drawableTint="#D35400"
        android:ems="10"
        android:hint="@string/etPass"
        android:inputType="text"
        android:paddingStart="12dp"
        android:password="true"
        android:textColor="#000000"
        android:textColorHighlight="#7E7D7D"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <Spinner
        android:id="@+id/spnTipo"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="135dp"
        android:background="@drawable/borde_spinner_custom"
        android:forceDarkAllowed="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnPuesto" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/etNombre"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etPaterno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/etMaterno"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/etMaterno"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPaterno" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/outline_alternate_email_24"
        android:drawablePadding="12dp"
        android:drawableTint="#D35400"
        android:ems="10"
        android:hint="@string/etCorreo"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textColorHighlight="#7E7D7D"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMaterno" />

    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/outline_call_24"
        android:drawablePadding="12dp"
        android:drawableTint="#D35400"
        android:ems="10"
        android:hint="@string/edTelefono"
        android:inputType="text"
        android:paddingStart="12dp"
        android:phoneNumber="true"
        android:textColor="#000000"
        android:textColorHighlight="#7E7D7D"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spnPuesto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

    <Spinner
        android:id="@+id/spnPuesto"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borde_spinner_custom"
        android:forceDarkAllowed="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTelefono" />

    <EditText
        android:id="@+id/etPaterno"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/etPaterno"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textColorHint="#7E7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etMaterno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="23dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toStartOf="@+id/btTomar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivFoto"
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btTomar"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#1B2631"
        android:text="@string/btTomar"
        android:textColor="#FFFFFF"
        app:cornerRadius="20dp"
        app:icon="@drawable/outline_camera_24"
        app:iconPadding="6dp"
        app:iconSize="25dp"
        app:iconTint="#D35400"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/snpDepartamento"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/borde_spinner_custom"
        android:forceDarkAllowed="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spnPuesto"
        app:layout_constraintTop_toBottomOf="@+id/edTelefono" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnPuesto"
        app:layout_constraintVertical_bias="0.776">

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#D35400"
            android:text="@string/btGuardar"
            android:textColor="#FFFFFF"
            android:textColorLink="#D35400" />

        <Button
            android:id="@+id/btActualizar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:backgroundTint="#1B2631"
            android:text="@string/btActualizar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btBorrar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="29dp"
            android:layout_weight="1"
            android:backgroundTint="#EF3629"
            android:text="@string/btBorrar"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>