<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bccbd2"
    tools:context=".Vista.asistencia">

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="106dp"
        android:text="@string/txttitulo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo">

        <TableLayout
            android:id="@+id/tblAsistencias"
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="108dp"
            android:backgroundTint="#040404"
            android:forceDarkAllowed="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtdia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1B2631"
                    android:padding="6dp"
                    android:text="@string/txtdia"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1B2631"
                    android:padding="6dp"
                    android:text="@string/txtEstado"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>